--- a/index.html
+++ b/index.html
@@ -19,27 +19,60 @@
         /* 🌸 꽃 전체 */
         .flower {
             position: relative;
-            width: 320px;
-            height: 320px;
+            width: 300px;
+            height: 420px;
+            /* 줄기 때문에 높이 증가 */
+        }
+
+        /* 🌿 줄기 */
+        .stem {
+            position: absolute;
+            width: 10px;
+            height: 170px;
+            background: linear-gradient(to bottom, #6fcf97, #2f9e44);
+            top: 160px;
+            left: 50%;
+            transform: translateX(-50%);
+            border-radius: 10px;
+            z-index: 0;
+        }
+
+        /* 🍃 잎 */
+        .leaf {
+            position: absolute;
+            width: 70px;
+            height: 40px;
+            background: linear-gradient(135deg, #7bed9f, #2ecc71);
+            border-radius: 50% 50% 50% 0;
+            top: 240px;
+            z-index: 0;
+            filter: drop-shadow(0 0 6px rgba(100, 255, 180, 0.4));
+        }
+
+        .leaf.left {
+            left: 50%;
+            transform: translateX(-100%) rotate(-25deg);
+        }
+
+        .leaf.right {
+            left: 50%;
+            transform: translateX(0%) rotate(25deg) scaleX(-1);
         }
 
         /* 🌸 꽃잎 */
         .petal {
             position: absolute;
             width: 80px;
-            height: 160px;
-            top: 50%;
+            height: 140px;
+            top: 0%;
             left: 50%;
-
-            /* ⭐ 핵심: 회전 기준 */
             transform-origin: 50% 100%;
-
             cursor: pointer;
             transition: transform 0.8s ease, opacity 0.8s ease;
             z-index: 2;
         }
 
-        /* 🌸 클릭된 꽃잎 */
+        /* 🌸 클릭 시 열리는 꽃잎 */
         .petal.open {
             transform:
                 translate(-50%, -50%) rotate(20deg) translateX(120px);
@@ -49,30 +82,38 @@
         /* 🌼 꽃 중심 */
         .center {
             position: absolute;
-            width: 36px;
-            height: 36px;
+            width: 45px;
+            height: 45px;
             background: radial-gradient(circle, #fff3b0, #ffcc33);
             border-radius: 50%;
-            top: 50%;
+            top: 23%;
             left: 50%;
-
-            /* 살짝 아래 */
-            transform: translate(-50%, -45%);
-
+            transform: translate(-50%, -50%);
             z-index: 3;
-            box-shadow: 0 0 18px rgba(255, 230, 120, 0.9);
+            box-shadow: 0 0 22px rgba(255, 230, 120, 0.9);
+            cursor: pointer;
+            transition: transform 0.8s ease, opacity 0.8s ease;
         }
 
-        /* 💍 반지 */
+        /* 🌼 center도 같이 사라지게 */
+        .center.open {
+            transform:
+                translate(-50%, -50%) rotate(20deg) translateX(120px);
+            opacity: 0;
+        }
+
+        /* 💍 반지 SVG */
         .ring {
             position: absolute;
-            top: 50%;
+            top: 20%;
             left: 50%;
+            width: 64px;
+            height: 64px;
             transform: translate(-50%, -50%) scale(0);
-            font-size: 48px;
             opacity: 0;
-            transition: all 0.8s ease;
+            transition: transform 0.9s ease, opacity 0.9s ease;
             z-index: 1;
+            filter: drop-shadow(0 0 10px rgba(255, 240, 180, 0.8));
         }
 
         .ring.show {
@@ -86,21 +127,29 @@
 
     <div class="flower" id="flower">
 
+        <!-- 🌿 줄기 -->
+        <div class="stem"></div>
+
+        <!-- 🍃 잎 -->
+        <div class="leaf left"></div>
+        <div class="leaf right"></div>
+
         <!-- 💍 반지 -->
-        <div class="ring" id="ring">💍</div>
+        <img src="Ring.svg" class="ring" id="ring" alt="ring" />
 
         <!-- 🌼 꽃 중심 -->
-        <div class="center"></div>
+        <div class="center" id="center"></div>
 
     </div>
 
     <script>
         const flower = document.getElementById("flower");
         const ring = document.getElementById("ring");
+        const center = document.getElementById("center");
 
         const petalCount = 12;
-        const radius = 70;
-        const petalSrc = "속성 1=Base.svg"; // 네 SVG 파일명
+        const radius = 20;
+        const petalSrc = "속성 1=Base.svg";
 
         for (let i = 0; i < petalCount; i++) {
             const angle = (360 / petalCount) * i;
@@ -109,21 +158,26 @@
             petal.src = petalSrc;
             petal.className = "petal";
 
-            // 🌸 올바른 배치 공식
             petal.style.transform = `
-      translate(-50%, -50%)
-      rotate(${angle}deg)
-      translateY(-${radius}px)
-    `;
+                translate(-50%, -50%)
+                rotate(${angle}deg)
+                translateY(-${radius}px)
+            `;
 
-            // 🌸 클릭 시 연출
             petal.addEventListener("click", () => {
                 petal.classList.add("open");
+                center.classList.add("open");
                 ring.classList.add("show");
             });
 
             flower.appendChild(petal);
         }
+
+        // 🌼 center 클릭해도 동일 연출
+        center.addEventListener("click", () => {
+            center.classList.add("open");
+            ring.classList.add("show");
+        });
     </script>
 
 </body>
