--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
             position: relative;
             width: 300px;
             height: 420px;
-            /* 줄기 때문에 높이 증가 */
         }
 
         /* 🌿 줄기 */
@@ -46,7 +45,6 @@
             border-radius: 50% 50% 50% 0;
             top: 240px;
             z-index: 0;
-            filter: drop-shadow(0 0 6px rgba(100, 255, 180, 0.4));
         }
 
         .leaf.left {
@@ -72,7 +70,6 @@
             z-index: 2;
         }
 
-        /* 🌸 클릭 시 열리는 꽃잎 */
         .petal.open {
             transform:
                 translate(-50%, -50%) rotate(20deg) translateX(120px);
@@ -95,10 +92,9 @@
             transition: transform 0.8s ease, opacity 0.8s ease;
         }
 
-        /* 🌼 center도 같이 사라지게 */
         .center.open {
             transform:
-                translate(-50%, -50%) rotate(20deg) translateX(120px);
+                translate(-50%, -50%) scale(0);
             opacity: 0;
         }
 
@@ -107,13 +103,15 @@
             position: absolute;
             top: 20%;
             left: 50%;
-            width: 64px;
-            height: 64px;
+            width: 200px;
+            height: 200px;
             transform: translate(-50%, -50%) scale(0);
             opacity: 0;
-            transition: transform 0.9s ease, opacity 0.9s ease;
+            transition: transform 0.9s cubic-bezier(.34, 1.56, .64, 1),
+                opacity 0.6s ease;
             z-index: 1;
-            filter: drop-shadow(0 0 10px rgba(255, 240, 180, 0.8));
+            filter: drop-shadow(0 0 14px rgba(255, 240, 180, 0.9));
+            pointer-events: none;
         }
 
         .ring.show {
@@ -127,10 +125,8 @@
 
     <div class="flower" id="flower">
 
-        <!-- 🌿 줄기 -->
         <div class="stem"></div>
 
-        <!-- 🍃 잎 -->
         <div class="leaf left"></div>
         <div class="leaf right"></div>
 
@@ -164,16 +160,15 @@
                 translateY(-${radius}px)
             `;
 
+            // 🌸 꽃잎 클릭 → 꽃잎만 열림
             petal.addEventListener("click", () => {
                 petal.classList.add("open");
-                center.classList.add("open");
-                ring.classList.add("show");
             });
 
             flower.appendChild(petal);
         }
 
-        // 🌼 center 클릭해도 동일 연출
+        // 🌼 중심 클릭 → 정답!
         center.addEventListener("click", () => {
             center.classList.add("open");
             ring.classList.add("show");
