--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         .stem {
             position: absolute;
             width: 10px;
-            height: 170px;
+            height: 300px;
             background: linear-gradient(to bottom, #6fcf97, #2f9e44);
-            top: 160px;
+            top: 170px;
             left: 50%;
             transform: translateX(-50%);
             border-radius: 10px;
@@ -39,11 +39,11 @@
         /* 🍃 잎 */
         .leaf {
             position: absolute;
-            width: 70px;
-            height: 40px;
+            width: 100px;
+            height: 70px;
             background: linear-gradient(135deg, #7bed9f, #2ecc71);
             border-radius: 50% 50% 50% 0;
-            top: 240px;
+            top: 280px;
             z-index: 0;
         }
 
@@ -76,47 +76,41 @@
             opacity: 0;
         }
 
-        /* 🌼 꽃 중심 */
-        .center {
-            position: absolute;
-            width: 46px;
-            height: 46px;
-            background: radial-gradient(circle, #fff3b0, #ffcc33);
-            border-radius: 50%;
-            top: 17%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            z-index: 3;
-            box-shadow: 0 0 22px rgba(255, 230, 120, 0.9);
-            cursor: pointer;
-            transition: transform 0.8s ease, opacity 0.8s ease;
-        }
-
-        .center.open {
-            transform:
-                translate(-50%, -50%) scale(0);
-            opacity: 0;
-        }
-
-        /* 💍 반지 SVG */
+        /* 💍 반지 (처음부터 존재) */
         .ring {
             position: absolute;
             top: 20%;
             left: 50%;
             width: 200px;
             height: 200px;
-            transform: translate(-50%, -50%) scale(0);
-            opacity: 0;
-            transition: transform 0.9s cubic-bezier(.34, 1.56, .64, 1),
-                opacity 0.6s ease;
+            transform: translate(-50%, -50%);
             z-index: 1;
+            /* center 뒤 */
             filter: drop-shadow(0 0 14px rgba(255, 240, 180, 0.9));
             pointer-events: none;
         }
 
-        .ring.show {
-            transform: translate(-50%, -50%) scale(1);
-            opacity: 1;
+        /* 🌼 꽃 중심 (뚜껑 역할) */
+        .center {
+            position: absolute;
+            width: 48px;
+            height: 48px;
+            background: radial-gradient(circle, #fff3b0, #ffcc33);
+            border-radius: 50%;
+            top: 17%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 3;
+            /* 반지 위 */
+            box-shadow: 0 0 22px rgba(255, 230, 120, 0.9);
+            cursor: pointer;
+            transition: transform 0.8s ease, opacity 0.8s ease;
+        }
+
+        /* 🌼 중앙 사라짐 → 뒤에 반지 드러남 */
+        .center.open {
+            transform: translate(-50%, -50%) scale(0);
+            opacity: 0;
         }
     </style>
 </head>
@@ -130,8 +124,8 @@
         <div class="leaf left"></div>
         <div class="leaf right"></div>
 
-        <!-- 💍 반지 -->
-        <img src="Ring.svg" class="ring" id="ring" alt="ring" />
+        <!-- 💍 반지 : 처음부터 있음 -->
+        <img src="Ring.svg" class="ring" alt="ring" />
 
         <!-- 🌼 꽃 중심 -->
         <div class="center" id="center"></div>
@@ -139,13 +133,13 @@
     </div>
 
     <script>
-        const flower = document.getElementById("flower");
-        const ring = document.getElementById("ring");
         const center = document.getElementById("center");
 
         const petalCount = 12;
         const radius = 20;
         const petalSrc = "속성 1=Base.svg";
+
+        const flower = document.getElementById("flower");
 
         for (let i = 0; i < petalCount; i++) {
             const angle = (360 / petalCount) * i;
@@ -160,7 +154,6 @@
                 translateY(-${radius}px)
             `;
 
-            // 🌸 꽃잎 클릭 → 꽃잎만 열림
             petal.addEventListener("click", () => {
                 petal.classList.add("open");
             });
@@ -168,10 +161,9 @@
             flower.appendChild(petal);
         }
 
-        // 🌼 중심 클릭 → 정답!
+        // 🌼 중앙 클릭 → 뚜껑 제거
         center.addEventListener("click", () => {
             center.classList.add("open");
-            ring.classList.add("show");
         });
     </script>
 
