--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
             margin: 0;
             height: 100vh;
 
-            /* 💖 러블리 배경 */
             background:
                 radial-gradient(circle at top, #ffdde1, #ee9ca7),
                 radial-gradient(circle at bottom, #d8b4fe, #a855f7);
@@ -20,7 +19,11 @@
             justify-content: center;
             align-items: center;
             overflow: hidden;
-            font-family: 'Pretendard', 'Apple SD Gothic Neo', sans-serif;
+
+            /* ✅ 기본 시스템 폰트 */
+            font-family: system-ui, -apple-system, BlinkMacSystemFont,
+                "Segoe UI", Roboto, "Apple SD Gothic Neo",
+                "Noto Sans KR", Arial, sans-serif;
         }
 
         /* 🌸 꽃 전체 */
@@ -124,16 +127,38 @@
             left: 50%;
             transform: translate(-50%, 10px);
             font-size: 26px;
-            font-weight: 600;
-            color: #7a004f;
+            font-weight: 500;
+            color: #5a0037;
             opacity: 0;
             transition: opacity 1.2s ease, transform 1.2s ease;
             z-index: 4;
             text-align: center;
             white-space: nowrap;
+            font-weight: 600;
         }
 
         .message.show {
+            opacity: 1;
+            transform: translate(-50%, 0);
+        }
+
+        /* 📅 날짜 */
+        .date {
+            position: absolute;
+            top: 52%;
+            left: 50%;
+            transform: translate(-50%, 10px);
+            font-size: 18px;
+            letter-spacing: 2px;
+            color: #4b0032;
+            opacity: 0;
+            transition: opacity 1.2s ease 0.6s,
+                transform 1.2s ease 0.6s;
+            z-index: 4;
+            font-weight: 500;
+        }
+
+        .date.show {
             opacity: 1;
             transform: translate(-50%, 0);
         }
@@ -145,19 +170,19 @@
     <div class="flower" id="flower">
 
         <div class="stem"></div>
-
         <div class="leaf left"></div>
         <div class="leaf right"></div>
 
-        <!-- 💍 반지 -->
         <img src="Ring.svg" class="ring" alt="ring" />
 
-        <!-- 🌼 꽃 중심 -->
         <div class="center" id="center"></div>
 
-        <!-- 💌 메시지 -->
         <div class="message" id="message">
-            재현아, 나와 결혼해줄래? 💖
+            재현아, 나와 결혼해줄래?
+        </div>
+
+        <div class="date" id="date">
+            2026.01.03
         </div>
 
     </div>
@@ -165,11 +190,14 @@
     <script>
         const center = document.getElementById("center");
         const message = document.getElementById("message");
+        const date = document.getElementById("date");
 
         const petalCount = 12;
         const radius = 20;
         const petalSrc = "속성 1=Base.svg";
         const flower = document.getElementById("flower");
+
+        const petals = [];
 
         for (let i = 0; i < petalCount; i++) {
             const angle = (360 / petalCount) * i;
@@ -188,16 +216,22 @@
                 petal.classList.add("open");
             });
 
+            petals.push(petal);
             flower.appendChild(petal);
         }
 
-        // 🌼 중앙 클릭 → 반지 드러남 → 메시지 등장
+        // 🌼 중앙 클릭 → 꽃 전체 열림 → 메시지 & 날짜
         center.addEventListener("click", () => {
             center.classList.add("open");
 
+            petals.forEach(petal => {
+                petal.classList.add("open");
+            });
+
             setTimeout(() => {
                 message.classList.add("show");
-            }, 600); // 반지 인식 후 메시지
+                date.classList.add("show");
+            }, 600);
         });
     </script>
 
