--- a/index.html
+++ b/index.html
@@ -162,6 +162,18 @@
             opacity: 1;
             transform: translate(-50%, 0);
         }
+
+        @media (max-width: 768px) {
+            .flower {
+                transform: scale(1.3);
+            }
+        }
+
+        @media (max-width: 480px) {
+            .flower {
+                transform: scale(1.45);
+            }
+        }
     </style>
 </head>
 
