--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marry Me</title>
 
     <style>
@@ -165,13 +166,13 @@
 
         @media (max-width: 768px) {
             .flower {
-                transform: scale(100);
+                transform: scale(1.3);
             }
         }
 
         @media (max-width: 480px) {
             .flower {
-                transform: scale(100);
+                transform: scale(1.45);
             }
         }
     </style>
