--- a/index.html
+++ b/index.html
@@ -166,13 +166,15 @@
 
         @media (max-width: 768px) {
             .flower {
-                transform: scale(1.1);
+                transform: scale(1.15);
+                transform-origin: center top;
             }
         }
 
         @media (max-width: 480px) {
             .flower {
-                transform: scale(1.1);
+                transform: scale(1.2);
+                transform-origin: center top;
             }
         }
     </style>
