위에 잘림 방지

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <style>
         body {
+            align-items: flex-start;
+            padding-top: 40px;
             margin: 0;
             height: 100vh;
 
